--- a/assets/doc.html
+++ b/assets/doc.html
@@ -19,42 +19,29 @@ Long press a song for more options.<br/>
 </p>
 <h3>The Info Screen</h3>
 
-<p>
-This screen shows information about the current song, and lets
-you control playback.</p>
-<p>
-Tapping the <tt>Forward</tt> / <tt>Back</tt> buttons will switch sub tunes. If there are
-no subtunes, it will switch song.<br/>
+<p>This screen shows information about the current song, and lets you control playback.</p>
+<p>Tapping the <tt>Forward</tt> / <tt>Back</tt> buttons will switch sub tunes. If there are no subtunes, it will switch song.<br/>
 Long pressing <tt>Forward</tt> / <tt>Back</tt> will always go to the next / previous song.<br>Pause and stop should be self-explanatory<br/>
 Tap the <tt>Plus</tt>-sign to add the current song to the active playlist.<br/>
 Tap <tt>SEQ</tt> / <tt>RND</tt> to switch between sequential and random order playback.<br/>
-Tap <tt>CONT</tt> to turn on/off continous playback, meaning the next song will
-play automatically when the current is done. <i>Note</i> that changing sub tunes
-will turn <tt>CONT</tt> off, to avoid switching song when the user may not want to.
-</p>
+Tap <tt>CONT</tt> to turn on/off continous playback, meaning the next song will play automatically when the current is done. <i>Note</i> that changing sub tunes will turn <tt>CONT</tt> off, to avoid switching song when the user may not want to.</p>
 <h3>The Search Screen</h3>
 
-This screen shows the latest search results, and also provides a button
-for searching (besides the one in the main menu). The search screen works
-similar to the Browser.
-
+<p>
+This screen shows the latest search results, and also provides a button for searching (besides the one in the main menu). The search screen works similar to the Browser.
+</p>
 <h3>Handling Playlists</h3>
 <p>
-You can add songs to playlists. There is always an <i>active</i> playlist, starting
-with the Favorites playlist which is created automatically. Long press on
-another playlist and choose &quot;Set as current&quot; to change the active playlist.
+You can add songs to playlists. There is always an <i>active</i> playlist, starting with the Favorites playlist which is created automatically. Long press on another playlist and choose &quot;Set as current&quot; to change the active playlist.
 </p>
 You can add songs, directories and even other playlists to the active playlist.
 <p>
-To add specific (or even all) sub tunes of a song, you need to start playing that
-song, and then tap the <tt>Plus</tt> sign on the Info screen.
+To add specific (or even all) sub tunes of a song, you need to start playing that song, and then tap the <tt>Plus</tt> sign on the Info screen.
 </p>
 
 <h3>Databases</h3>
 <p>
-Droidsound provides access for &quot;external&quot; databases. Currently only <i>CSDb</i> is available.
-When you enter a database Search will search that database instead of your normal music
-collection.
+Droidsound provides access for &quot;external&quot; databases. Currently only <i>CSDb</i> is available. When you enter a database Search will search that database instead of your normal music collection.
 </p>
 <h3>Headset &amp; Media Buttons</h3>
 <p>
@@ -69,15 +56,8 @@ Hold for more than 3s to turn speech on/off.<br/>
 
 <h2>The Song Database</h2>
 
-<p>Droidsound uses a database both for browsing and searching files, so it needs to
-keep the files on storage in sync with it's database. It does this by scanning for
-changes each time you start Droidsound (you can also do an explicit scan from the
-Settings menu).</p>
-<p>When changes are detected (an file that has been added, removed or changed) Droidsound
-locks the database and opens a dialog showing progress. This should only happen when 
-there are actual changes, if you see the dialog each time it probably means
-you have files that are not detected as songs somewhere in your <tt>MODS</tt>-direcotry.
-</p>
+<p>Droidsound uses a database both for browsing and searching files, so it needs to keep the files on storage in sync with it's database. It does this by scanning for changes each time you start Droidsound (you can also do an explicit scan from the Settings menu).</p>
+<p>When changes are detected (an file that has been added, removed or changed) Droidsound locks the database and opens a dialog showing progress. This should only happen when there are actual changes, if you see the dialog each time it probably means you have files that are not detected as songs somewhere in your <tt>MODS</tt>-direcotry.</p>
 
 <h2>File Formats</h2>
 
