--- a/assets/doc.html
+++ b/assets/doc.html
@@ -2,7 +2,7 @@
 <head></head>
 <body>
 <h1>Droidsound Help</h1>
-
+<i>v1.0</i>
 <h2>The User Interface</h2>
 
 Droidsound lets you switch between 3 main screens using the button in the top-right corner;
@@ -26,9 +26,9 @@ Tap the <tt>Plus</tt>-sign to add the current song to the active playlist.<br/>
 Tap <tt>SEQ</tt> / <tt>RND</tt> to switch between sequential and random order playback.<br/>
 Tap <tt>CONT</tt> to turn on/off continous playback, meaning the next song will play automatically when the current is done. <i>Note</i> that changing sub tunes will turn <tt>CONT</tt> off, to avoid switching song when the user may not want to.</p>
 <h3>The Search Screen</h3>
-
 <p>
 This screen shows the latest search results, and also provides a button for searching (besides the one in the main menu). The search screen works similar to the Browser.
+You can currently only search for song titles when searching the song database.
 </p>
 <h3>Handling Playlists</h3>
 <p>
@@ -41,7 +41,7 @@ To add specific (or even all) sub tunes of a song, you need to start playing tha
 
 <h3>Databases</h3>
 <p>
-Droidsound provides access for &quot;external&quot; databases. Currently only <i>CSDb</i> is available. When you enter a database Search will search that database instead of your normal music collection.
+Droidsound provides access for &quot;external&quot; databases. Currently only <i>CSDb</i> is supported. When you enter a database, performing a search will search that database instead of your normal music collection.
 </p>
 <h3>Headset &amp; Media Buttons</h3>
 <p>
@@ -50,7 +50,7 @@ You can control Droidsound with the Media button on your headset;
 <p>
 Single tap to play/pause.<br/>
 Squeeze ( > 0.5s) to change song.<br/>
-Hold for more than 3s to turn speech on/off.<br/>
+Hold for more than 2s to turn speech on/off.
 </p>
 <p><i>Note</i> that the button will not be activate unless the player is playing or paused.</p>
 
@@ -62,14 +62,14 @@ Hold for more than 3s to turn speech on/off.<br/>
 <h2>File Formats</h2>
 
 <h4>libsidplay2</h4>
-<a href=http://sourceforge.net/projects/sidplay2/>http://sourceforge.net/projects/sidplay2/</a>
+<a href="http://sourceforge.net/projects/sidplay2/">http://sourceforge.net/projects/sidplay2/</a>
 
 <ul>
-<li>Plays <i>SID</i> files, music from the Commodore C64.</li>
+<li>Plays SID files, music from the Commodore 64.</li>
 </ul>
 <h4>modplug</h4>
 
-<a href=http://sourceforge.net/projects/modplug/>http://sourceforge.net/projects/modplug/</a>
+<a href="http://sourceforge.net/projects/modplug/">http://sourceforge.net/projects/modplug/</a>
 
 <ul>
 <li>Composer 669 / UNIS 669 (669)</li>
@@ -103,7 +103,7 @@ Hold for more than 3s to turn speech on/off.<br/>
 
 
 <h4>GME</h4>
-<a href=http://slack.net/~ant/libs/audio.html>http://slack.net/~ant/libs/audio.html</a>
+<a href="http://slack.net/~ant/libs/audio.html">http://slack.net/~ant/libs/audio.html</a>
 <ul>
 <li>X Spectrum, Amstrad CPC (AY)</li>
 <li>Nintendo Game Boy (GBS)</li>
@@ -113,7 +113,8 @@ Hold for more than 3s to turn speech on/off.<br/>
 <li>Nintendo NES, Famicom (with VRC 6, Namco 106, and FME-7 sound) (NSF, NSFE)</li>
 <li>Atari systems using POKEY sound chip (SAP)</li>
 <li>Super Nintendo, Super Famicom (SPC)</li>
-<li>Sega Master System, Mark III, Sega Genesis, Mega Drive, BBC Micro (VGM)</li>
+<li>Sega Master System, Mark III, Sega Genesis, Mega Drive, BBC Micro (VGM, VGZ)</li>
 </ul>
 </body>
 </html>
+
