--- a/assets/doc.html
+++ b/assets/doc.html
@@ -24,7 +24,7 @@ Long press a song for more options.<br/>
 Long pressing <tt>Forward</tt> / <tt>Back</tt> will always go to the next / previous song.<br>Pause and stop should be self-explanatory<br/>
 Tap the <tt>Plus</tt>-sign to add the current song to the active playlist.<br/>
 Tap <tt>SEQ</tt> / <tt>RND</tt> to switch between sequential and random order playback.<br/>
-Tap <tt>CONT</tt> to turn on/off continous playback, meaning the next song will play automatically when the current is done. <i>Note</i> that changing sub tunes will turn <tt>CONT</tt> off, to avoid switching song when the user may not want to.</p>
+Tap <tt>CONT</tt> to turn on/off continuous playback, meaning the next song will play automatically when the current is done. <i>Note</i> that changing sub tunes will turn <tt>CONT</tt> off, to avoid switching song when the user may not want to.</p>
 <h3>The Search Screen</h3>
 <p>
 This screen shows the latest search results, and also provides a button for searching (besides the one in the main menu). The search screen works similar to the Browser.
@@ -38,6 +38,30 @@ You can add songs, directories and even other playlists to the active playlist.
 <p>
 To add specific (or even all) sub tunes of a song, you need to start playing that song, and then tap the <tt>Plus</tt> sign on the Info screen.
 </p>
+
+<h3>Keyboard shortcuts</h3>
+If you have a hardware keyboard, you can use these shortcuts:
+<ul>
+<li><tt><b>[1-9] </b></tt>Subtunes</li>
+<li><tt><b>[Z]   </b></tt>Previous Song</li>
+<li><tt><b>[X]   </b></tt>Play/Pause</li>
+<li><tt><b>[V]   </b></tt>Stop</li>
+<li><tt><b>[B]   </b></tt>Next Song</li>
+<li><tt><b>[N]   </b></tt>Previous Subtune</li>
+<li><tt><b>[M]   </b></tt>Next Subtune</li>
+<li><tt><b>[S]   </b></tt>Shuffle On/Off</li>
+<li><tt><b>[R]   </b></tt>Repeat mode</li>
+<li><tt><b>[U]   </b></tt>Favorite menu</li>
+<li><tt><b>[I]   </b></tt>Context menu</li>
+<li><tt><b>[O]   </b></tt>Option menu</li>
+<li><tt><b>[P]   </b></tt>Settings</li>
+<li><tt><b>[F]   </b></tt>Search</li>
+<li><tt><b>[TAB] </b></tt>Switch view</li>
+<li><tt><b>[,] </b></tt>Volume down</li>
+<li><tt><b>[.] </b></tt>Volume up</li>
+<li><tt><b>[DEL] </b></tt>Goto parent</li>
+<li><tt><b>[Q] </b></tt>Quit</li>
+</ul>
 
 <h3>Databases</h3>
 <p>
@@ -54,10 +78,11 @@ Hold for more than 2s to turn speech on/off.
 </p>
 <p><i>Note</i> that the button will not be activate unless the player is playing or paused.</p>
 
+
 <h2>The Song Database</h2>
 
 <p>Droidsound uses a database both for browsing and searching files, so it needs to keep the files on storage in sync with it's database. It does this by scanning for changes each time you start Droidsound (you can also do an explicit scan from the Settings menu).</p>
-<p>When changes are detected (an file that has been added, removed or changed) Droidsound locks the database and opens a dialog showing progress. This should only happen when there are actual changes, if you see the dialog each time it probably means you have files that are not detected as songs somewhere in your <tt>MODS</tt>-direcotry.</p>
+<p>When changes are detected (an file that has been added, removed or changed) Droidsound locks the database and opens a dialog showing progress. This should only happen when there are actual changes, if you see the dialog each time it probably means you have files that are not detected as songs somewhere in your <tt>MODS</tt>-directory.</p>
 
 <h2>File Formats</h2>
 
