--- a/assets/doc.html
+++ b/assets/doc.html
@@ -1,8 +1,10 @@
 <html>
-<head></head>
-<body>
+<head>
+<meta name = "viewport" content = "width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
+</head>
+<body bgcolor="#000000" text="#ffffff" link="#a0a0ff", vlink="#a0a0ff">
 <h1>Droidsound Help</h1>
-<i>v1.0</i>
+<i>v1.1</i>
 <h2>The User Interface</h2>
 
 Droidsound lets you switch between 3 main screens using the button in the top-right corner;
@@ -22,9 +24,12 @@ Long press a song for more options.<br/>
 <p>This screen shows information about the current song, and lets you control playback.</p>
 <p>Tapping the <tt>Forward</tt> / <tt>Back</tt> buttons will switch sub tunes. If there are no subtunes, it will switch song.<br/>
 Long pressing <tt>Forward</tt> / <tt>Back</tt> will always go to the next / previous song.<br>Pause and stop should be self-explanatory<br/>
-Tap the <tt>Plus</tt>-sign to add the current song to the active playlist.<br/>
+Tap the <tt>PLUS</tt>-sign to add the current song to the active playlist.<br/>
 Tap <tt>SEQ</tt> / <tt>RND</tt> to switch between sequential and random order playback.<br/>
-Tap <tt>CONT</tt> to turn on/off continuous playback, meaning the next song will play automatically when the current is done. <i>Note</i> that changing sub tunes will turn <tt>CONT</tt> off, to avoid switching song when the user may not want to.</p>
+Tap <tt>CONT</tt> to turn on/off continuous playback, meaning the next song will play automatically when the current is done. <i>Note</i> that changing sub tunes will turn <tt>CONT</tt> off, to avoid switching song when the user may not want to.<br/>
+Tap <tt>W</tt> to turn on/off <i>wakelocking</i>, which mean Droidsound forces the screen not to blank.
+</p>
+
 <h3>The Search Screen</h3>
 <p>
 This screen shows the latest search results, and also provides a button for searching (besides the one in the main menu). The search screen works similar to the Browser.
@@ -73,16 +78,17 @@ You can control Droidsound with the Media button on your headset;
 </p>
 <p>
 Single tap to play/pause.<br/>
-Squeeze ( > 0.5s) to change song.<br/>
+Squeeze ( > 0.3s) to change song.<br/>
 Hold for more than 2s to turn speech on/off.
 </p>
-<p><i>Note</i> that the button will not be activate unless the player is playing or paused.</p>
+<p><i>Note</i> that the button will not be activated unless the player is playing or paused.</p>
 
 
 <h2>The Song Database</h2>
 
 <p>Droidsound uses a database both for browsing and searching files, so it needs to keep the files on storage in sync with it's database. It does this by scanning for changes each time you start Droidsound (you can also do an explicit scan from the Settings menu).</p>
 <p>When changes are detected (an file that has been added, removed or changed) Droidsound locks the database and opens a dialog showing progress. This should only happen when there are actual changes, if you see the dialog each time it probably means you have files that are not detected as songs somewhere in your <tt>MODS</tt>-directory.</p>
+<p>The database (as well as some internal data and config files) can be found in the <tt>droidsound/</tt> folder on your SD card.</p>
 
 <h2>File Formats</h2>
 
@@ -140,6 +146,175 @@ Hold for more than 2s to turn speech on/off.
 <li>Super Nintendo, Super Famicom (SPC)</li>
 <li>Sega Master System, Mark III, Sega Genesis, Mega Drive, BBC Micro (VGM, VGZ)</li>
 </ul>
+
+<h4>Hivelytracker</h4>
+
+<a href="http://hivelytracker.com/">http://hivelytracker.com/</a>
+<ul>
+<li>Hively</li>
+<li>AHX</li>
+</ul>
+
+<h4>UADE</h4>
+<a href="http://zakalwe.fi/uade/">http://zakalwe.fi/uade/</a>
+<ul>
+<li>A.M. Composer 1.2</li>
+<li>AC1D</li>
+<li>Actionamics</li>
+<li>AHX</li>
+<li>Amos Music Bank</li>
+<li>AProSys</li>
+<li>Art and Magic</li>
+<li>Art of Noise</li>
+<li>Audiosculpture</li>
+<li>Beathoven Synthesizer</li>
+<li>Benn Daglish</li>
+<li>Bladepacker / Unique Development</li>
+<li>Channel Player 1, 2, 3</li>
+<li>Chip Tracker (KRIS Tracker)</li>
+<li>Custom Made / Ron Klaren</li>
+<li>Customplay</li>
+<li>Darius Zendeh</li>
+<li>Dave Lowe (old and new)</li>
+<li>David Whittaker</li>
+<li>Delitracker custom songs</li>
+<li>Delta Music 1.0 and 2.0</li>
+<li>Delta Packer 1.0 / Tronic</li>
+<li>Digibooster 1.x</li>
+<li>Digital Illusions</li>
+<li>Digital Mugician</li>
+<li>DSS</li>
+<li>Dynamic Synthesizer</li>
+<li>EarAche</li>
+<li>EMS</li>
+<li>EMS v6</li>
+<li>Eureka Packer</li>
+<li>FC-M Packer</li>
+<li>FollinPlayer II</li>
+<li>ForgottenWorldPlayer (FWMP)</li>
+<li>Fredmonitor</li>
+<li>FredGray</li>
+<li>FuchsTracker</li>
+<li>Future Composer 1.3 / 1.4</li>
+<li>FutureComposer (BSI)</li>
+<li>Fuzzac Packer</li>
+<li>Game Music Creator</li>
+<li>GlueMon</li>
+<li>GraveComposer</li>
+<li>HeatSeeker mc1.0</li>
+<li>Hippel</li>
+<li>Hippel 7V</li>
+<li>Hippel-COSO</li>
+<li>Hornet Packer</li>
+<li>Howie Davies (HD)</li>
+<li>IceTracker/soundtracker 2.6</li>
+<li>Images Music System</li>
+<li>Infogrames / Rob Hubbard 2</li>
+<li>InStereo 1, 2.0 (IS, IS20)</li>
+<li>Janko Mrsic-Flogel</li>
+<li>JamCracker</li>
+<li>Jason Brooke</li>
+<li>Jason Page</li>
+<li>Jason Page Old / Steve Turner</li>
+<li>Kefrens Sound Machine</li>
+<li>Kris Hatlelid (KH)</li>
+<li>LeglessMusicEditor (LME)</li>
+<li>MajorTom2 (Holynoise/MajorTom)</li>
+<li>M.O.N</li>
+<li>Magnetic Fields (MFP)</li>
+<li>Mark Cooksey (MC)</li>
+<li>Mark Cooksey OLD (MCO)</li>
+<li>Mark II</li>
+<li>Martin Walker</li>
+<li>MED</li>
+<li>MED Packer (MMDC)</li>
+<li>Medley</li>
+<li>MikeDavies /Tiertex Player (MD)</li>
+<li>ModuleProtector 1.0</li>
+<li>Music-Assembler</li>
+<li>NoisePacker 1, 2, 1.0, 2.0, 3.0</li>
+<li>NoiseRunner</li>
+<li>NoiseTracker</li>
+<li>NoiseTracker Pak</li>
+<li>Novotrade Packer (NTP)</li>
+<li>NSF</li>
+<li>OctaMED</li>
+<li>Oktalyzer</li>
+<li>Old SoundTracker</li>
+<li>Paul Robotham (dat+ssd)</li>
+<li>Paul Shields</li>
+<li>Paul Summers</li>
+<li>Peter Verswyvelen</li>
+<li>Pha (Pro/Hanni) Packer</li>
+<li>Pierre Adane Packer (PAP)</li>
+<li>PolkaPacker</li>
+<li>PolkaRunner</li>
+<li>Power Music</li>
+<li>PowerTracker (Laxity-Player)</li>
+<li>Pro-Packer 1.0, 2.0, 2.1, 3.0</li>
+<li>Promizer 0.1, 1.x, 2.0, 4.0</li>
+<li>ProPacker(PHA)</li>
+<li>ProRunner 1.0, 2.0, 2.1</li>
+<li>ProTracker</li>
+<li>PSA</li>
+<li>PumaTracker</li>
+<li>Pygmy Packer</li>
+<li>QuadraComposer (EMOD)</li>
+<li>Richard Joseph (sng+ins, rjp)</li>
+<li>Riff Raff (RIFF)</li>
+<li>Rob Hubbard (RH)</li>
+<li>Rob Hubbard Old (RHO)</li>
+<li>Rob Hubbard 2 (Infogrames)</li>
+<li>SAP</li>
+<li>SCUMM Player</li>
+<li>Sean Connolly</li>
+<li>Sean Conran</li>
+<li>Sidmon 1.0</li>
+<li>Sidmon 2.0</li>
+<li>Silmarils (MOK)</li>
+<li>SKYT Packer</li>
+<li>SonicArranger</li>
+<li>SonicArranger (packed)</li>
+<li>SOPROL (Sound Prog. Lang) (SPL)</li>
+<li>SoundControl (SC)</li>
+<li>Soundfactory (PSF)</li>
+<li>SoundFX 1.3, 2.0</li>
+<li>SoundImages (DP)=JasonPageNew</li>
+<li>SoundImages (EP)=TinyWilliams</li>
+<li>SoundMaster 1/2 (sm, sm1, sm2)</li>
+<li>SoundMon 1.0, 2.0, 2.2</li>
+<li>SoundTracker 15, 31</li>
+<li>SoundTracker Pro 3.0</li>
+<li>SpecialFX (JD)</li>
+<li>SpeedyA1System (SAS)</li>
+<li>SpeedySystem (SS)</li>
+<li>StarTrekker 4</li>
+<li>StarTrekker Packer</li>
+<li>Steve Barrett</li>
+<li>SUNtronic</li>
+<li>Suntronic custom</li>
+<li>Synth Dream (SDR)</li>
+<li>Synth Pack (OSP)</li>
+<li>Synthesis (Synth, SYN)</li>
+<li>SynTracker</li>
+<li>TFMX 1.x, 7V, Pro</li>
+<li>The Player 4.0a, 4.0b, 4.1a, 5.0a, 6.0a, 6.1a</li>
+<li>The Holy Noise</li>
+<li>Thomas Hermann (THM)</li>
+<li>Tim Follin (tf)</li>
+<li>TME</li>
+<li>Tomi Pakarinen (TomyTracker)</li>
+<li>TrackerPacker 1, 2, 3</li>
+<li>Ultimate SoundTracker</li>
+<li>UNIC-Tracker</li>
+<li>Unic-Tracker 2 / Laxitytracker</li>
+<li>VSS</li>
+<li>Wally Beben</li>
+<li>WantonPacker</li>
+<li>Xann Packer</li>
+<li>YMST (MYST)</li>
+<li>Zen Packer</li>
+
 </body>
 </html>
 
