--- a/assets/doc.html
+++ b/assets/doc.html
@@ -56,6 +56,24 @@ Music is played by a service, and keeps playing in the background while you do o
 Droidsound is also associated with its supported music files, so you should be able to click links to music from the Web brower, and they should start playing in the background.<br/>
 All Android browsers are not working correctly in this regard (for instance Galaxy S always downloads all files) and for that reason you can also select to <i>Share</i> a link with Droidsound to get the same result.
 </p>
+
+<h3>Streaming</h3>
+<p>Droidsound can stream MP3s over the network, including from Shoutcast & Icecast servers. It can also browse remote websites if they
+are presented in standard Apache dirindex mode.<br/>
+Here are some ways you can try this out;
+</p>
+<ul>
+<li>Click on one of the links in the included <i>Network</i> folder</li>
+<li>Long press an M3U or link to an MP3 in the webbrowser, and <b>Share</b> it to Droidsound</li>
+<li>From the Droidsound menu, create a New HTTP-link to a website with music</li>
+</ul>
+
+<h3>Ringtones</h3>
+
+<p>To create a ringtone from a song, long press the song and select <i>Create Ringtone</i> and choose the desired options.<br/>
+Default format is WAV 22KHz mono, select HQ for Stereo 44KHz. 
+</p>
+
 <h3>Keyboard shortcuts</h3>
 If you have a hardware keyboard, you can use these shortcuts:
 <ul>
@@ -106,8 +124,7 @@ Hold for more than 2s to turn speech on/off.
 
 In addition to playing MP3, these plugins are currently included:
 
-
-<h4>libsidplay2</h4>
+<h4>libsidplay2 & VICE/reSID</h4>
 <a href="http://sourceforge.net/projects/sidplay2/">http://sourceforge.net/projects/sidplay2/</a>
 
 <ul>
