--- a/assets/doc.html
+++ b/assets/doc.html
@@ -120,6 +120,13 @@ Hold for more than 2s to turn speech on/off.
 <p>When changes are detected (an file that has been added, removed or changed) Droidsound locks the database and opens a dialog showing progress. This should only happen when there are actual changes, if you see the dialog each time it probably means you have files that are not detected as songs somewhere in your <tt>MODS</tt>-directory.</p>
 <p>The database (as well as some internal data and config files) can be found in the <tt>droidsound/</tt> folder on your SD card.</p>
 
+
+<h2>Sourcecode</h2>
+
+The sourcecode can be found on github:<br/>
+<a href=https://github.com/sasq64/droidsound>https://github.com/sasq64/droidsound</a>
+
+
 <h2>File Formats</h2>
 
 In addition to playing MP3, these plugins are currently included:
