Updated the new preference with the other language files.
Added more Buffered I/O.

Added more tune linkes to the download local page and the internet page.

--- a/assets/downloadlocal.html
+++ b/assets/downloadlocal.html
@@ -10,6 +10,12 @@
 	<p>(Remember to click on the zip once it's downloaded to your phone)</p>
 
 	<h3>Music packs</h3>
+	
+	<b>Akumu's NSF Archive (12.5 MB)</b>
+	<br>
+	<a href="http://lioncash.uni.cc/droidsound/akumu/Akumu'sNSFArchive.zip">Akumu's NSF Archive (Akumu'sNSFArchive.zip)</a>
+	
+	<p>Collection of nearly every NES tune. Gathered by Akumu and several other people.</p>
 
 	<b>AmiGames (17 MB)</b>
 	<br>
@@ -79,6 +85,11 @@
 	<p>The High Voltage Sid Collection contains more or less every C64
 		tune ever released and is a must for anyone who likes the sound of
 		 SID.</p>
+		 
+	<h4>Akumu's NSF Archive</h4>
+	<a href="http://akumunsf.good-evil.net/">http://akumunsf.good-evil.net/</a>
+	
+	<p>Nearly every NSF file for the NES archived by Akumu and several others.</p>
 		 
 	<h4>Atari SAP Music Collection (ASMA)</h4>
 	<a href="http://www.asma.atari.org/">http://www.asma.atari.org/</a>
