Update fileformat HTML.

--- a/assets/doc.html
+++ b/assets/doc.html
@@ -159,6 +159,7 @@ In addition to playing MP3, these plugins are currently included:
 <li>Jazz Jackrabbit 2 Music (J2B)</li>
 <li>DigiTracker (MDL)</li>
 <li>OctaMED (MED)</li>
+<li>MikMod Sound System (PAT)</li>
 <li>MO3 compressed modules (MO3)</li>
 <li>ProTracker / NoiseTracker / etc. (MOD)</li>
 <li>OpenMPT (MPTM)</li>
