--- a/assets/doc.html
+++ b/assets/doc.html
@@ -4,10 +4,10 @@
 </head>
 <body bgcolor="#000000" text="#ffffff" link="#a0a0ff", vlink="#a0a0ff">
 <h1>Droidsound Help</h1>
-<i>v1.3</i>
+<i>v1.4</i>
 <h2>The User Interface</h2>
 
-Droidsound lets you switch between 3 main screens using the button in the top-right corner;
+Droidsound lets you switch between 3 main screens by swiping across the screen or tapping the top indicator.
 
 <h3>The Browser</h3>
 <p>
@@ -29,14 +29,13 @@ Tapping the <tt>Forward</tt> / <tt>Back</tt> buttons will switch sub tunes. If t
 Long pressing <tt>Forward</tt> / <tt>Back</tt> will always go to the next / previous song.<br>Pause and stop should be self-explanatory<br/>
 Tap the <tt>PLUS</tt>-sign to add the current song to the active playlist.<br/>
 Tap <tt>SEQ</tt> / <tt>RND</tt> to switch between sequential and random order playback.<br/>
-Tap <tt>CONT</tt> to turn on/off continuous playback, meaning the next song will play automatically when the current is done. <i>Note</i> that changing sub tunes will turn <tt>CONT</tt> off, to avoid switching song when the user may not want to.<br/>
-Tap <tt>W</tt> to turn on/off <i>wakelocking</i>, which mean Droidsound forces the screen not to blank.
+Tap <tt>CONT</tt> / <tt>HOLD</tt> to turn on/off continuous playback, meaning the next song will play automatically when the current is done.
 </p>
 
 <h3>The Search Screen</h3>
 <p>
 This screen shows the latest search results, and also provides a button for searching (besides the one in the main menu). The search screen works similar to the Browser.
-You can currently only search for song titles when searching the song database.
+You can search for song titles or composers when searching the song database.
 </p>
 <h3>Handling Playlists</h3>
 <p>
@@ -56,6 +55,16 @@ Music is played by a service, and keeps playing in the background while you do o
 Droidsound is also associated with its supported music files, so you should be able to click links to music from the Web brower, and they should start playing in the background.<br/>
 All Android browsers are not working correctly in this regard (for instance Galaxy S always downloads all files) and for that reason you can also select to <i>Share</i> a link with Droidsound to get the same result.
 </p>
+
+<h3>Compressed Files</h3>
+
+<p>Droidsound supports zip and rar files, but in different ways.</p>
+<p><i>Zip files</i> are treated as directories, and all files inside them are indexed in the database. Since all files are
+compressed individually the can be very large.</p>
+<p><i>RAR files</i> are only supported in the form om <i>RSN</i> files, which is considered a single music file, where each file in the
+archive is treated as a subtune. These files are uncompressed entirely when playing. RSN files where invented for SNES music,
+but in Droidsound they are allowed to contain any music. For this reason, Droidsound also recognizes the RMU (Rar MUsic) extension,
+which you may want to use for non-SNES music RAR files.</p>
 
 <h3>Streaming</h3>
 <p>Droidsound can stream MP3s over the network, including from Shoutcast & Icecast servers. It can also browse remote websites if they
@@ -363,6 +372,23 @@ In addition to playing MP3, these plugins are currently included:
 <li>Xann Packer</li>
 <li>YMST (MYST)</li>
 <li>Zen Packer</li>
+</ul>
+
+<h4>SexyPSF</h4>
+<a href="http://projects.raphnet.net/#sexypsf">http://projects.raphnet.net/</a>
+<p>Plays Playstation 1 music.</p>
+<ul>
+<li>PSF</li>
+<li>MINIPSF</li>
+</ul>
+
+<h4>PlayGSF</h4>
+<a href="http://projects.raphnet.net/#playgsf">http://projects.raphnet.net/</a>
+<p>Plays Gameboy Advance music.</p>
+<ul>
+<li>GSF</li>
+<li>MINIGSF</li>
+</ul>
 
 </body>
 </html>
