Updated Doc and examples

--- a/assets/doc.html
+++ b/assets/doc.html
@@ -66,6 +66,14 @@ archive is treated as a subtune. These files are uncompressed entirely when play
 but in Droidsound they are allowed to contain any music. For this reason, Droidsound also recognizes the RMU (Rar MUsic) extension,
 which you may want to use for non-SNES music RAR files.</p>
 
+<h3>Song databases</h3>
+
+Droidsounds includes special support for a few popular song archives;
+<ul>
+<li><b>HVSC</b> - Uses songlengths.txt to show song length for all SIDs in the HVSC C64 archive>/li>
+<li><b>spcsets</b> - Uses rsnsets.dat to show fullnames for the spcsets SNES collection</li>
+</ul>
+
 <h3>Streaming</h3>
 <p>Droidsound can stream MP3s over the network, including from Shoutcast & Icecast servers. It can also browse remote websites if they
 are presented in standard Apache dirindex mode.<br/>
