Candidate for release - fixed sort order in playlistview, added a bit to docs and bumped version number

--- a/assets/doc.html
+++ b/assets/doc.html
@@ -37,6 +37,7 @@ Tap <tt>CONT</tt> / <tt>HOLD</tt> to turn on/off continuous playback, meaning th
 This screen shows the latest search results, and also provides a button for searching (besides the one in the main menu). The search screen works similar to the Browser.
 You can search for song titles or composers when searching the song database.
 </p>
+<p>Also note that if you are browsing another database (like CSDb) search will take place there instead of the main database).</p>
 <h3>Handling Playlists</h3>
 <p>
 You can add songs to playlists. There is always an <i>active</i> playlist, starting with the Favorites playlist which is created automatically. Long press on another playlist and choose &quot;Set as current&quot; to change the active playlist.
@@ -90,6 +91,8 @@ Here are some ways you can try this out;
 <p>To create a ringtone from a song, long press the song and select <i>Create Ringtone</i> and choose the desired options.<br/>
 Default format is WAV 22KHz mono, select HQ for Stereo 44KHz. 
 </p>
+<p>If you want to create a ringtone from another subtune then the default one, you need to use the PLUS button on the play
+screen to add a specific song to your playlist, and then create the ringtone from that playlist entry instead.</p>
 
 <h3>Keyboard shortcuts</h3>
 If you have a hardware keyboard, you can use these shortcuts:
@@ -400,4 +403,3 @@ In addition to playing MP3, these plugins are currently included:
 
 </body>
 </html>
-
