--- a/assets/info.mod.html
+++ b/assets/info.mod.html
@@ -1,6 +1,8 @@
 <html><head><style type="text/css">
 body {
 	color: #ffffff; background-color: #000000; margin:0; padding:0;
+	background-image:url("${IMAGEPATH}amiga.jpg")
+$
 }
 img {
 	display: block;
@@ -11,12 +13,15 @@ img {
 
 .title {
 	color: #ffffff; background-color: #000080; font-weight:bold; font-size:16pt; text-overflow: ellipsis; overflow: hidden;
+	padding: 2pt; height: 1.4em
 }
 .subtitle {
 	color: #ffffff; background-color: #000080; text-overflow: ellipsis; overflow: hidden; white-space: nowrap;
+	padding: 2pt; height: 1.4em
 }
 .infotitle {
-	color: #ffffff; background-color: #8888ff; font-size:12pt; text-overflow: ellipsis; overflow: hidden;
+	color: #ffffff; background-color: #8888ff; font-size:10pt; text-overflow: ellipsis; overflow: hidden;
+	padding-top: 1pt; padding-left: 2pt; height: 1.4em
 }
 </style>
 
@@ -24,8 +29,6 @@ img {
 <div class="title">${title}</div>
 <div class="subtitle">${composer}</div>
 <div class="infotitle">${song_source}</div>
-${if isMOD}<img src="${IMAGEPATH}amiga.jpg"/><br/>${end}
-${if isXM}<img src="${IMAGEPATH}ft2logo.png"/><br/>${end}
 <b>Format:</b> ${format}<br/>
 <b>Channels:</b> ${channels}<br/>
 ${if instruments}
