Major cleanup of metadata reporting

--- a/assets/info.mod.html
+++ b/assets/info.mod.html
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: 'topaz';
-    src: url('${FONTPATH}topaz.ttf');
+    src: url('${DATAPATH}topaz.ttf');
 }
 
 body {
