--- a/assets/info.def.html
+++ b/assets/info.def.html
@@ -23,7 +23,7 @@ body {
 }
 
 .comment {
-	color: #99aaff; white-space: pre-wrap;
+	color: #99aaff; white-space: pre-wrap; font-family: monospace;
 }
 
 </style>
