--- a/assets/doc.html
+++ b/assets/doc.html
@@ -4,7 +4,7 @@
 </head>
 <body bgcolor="#000000" text="#ffffff" link="#a0a0ff", vlink="#a0a0ff">
 <h1>Droidsound Help</h1>
-<i>v1.4</i>
+<i>v1.5</i>
 <h2>The User Interface</h2>
 
 Droidsound lets you switch between 3 main screens by swiping across the screen or tapping the top indicator.
@@ -71,7 +71,7 @@ which you may want to use for non-SNES music RAR files.</p>
 
 Droidsounds includes special support for a few popular song archives;
 <ul>
-<li><b>HVSC</b> - Uses songlengths.txt to show song length for all SIDs in the HVSC C64 archive>/li>
+<li><b>HVSC</b> - Uses songlengths.txt to show song length for all SIDs in the HVSC C64 archive</li>
 <li><b>spcsets</b> - Uses rsnsets.dat to show fullnames for the spcsets SNES collection</li>
 </ul>
 
@@ -133,6 +133,7 @@ Hold for more than 2s to turn speech on/off.
 </p>
 <p><i>Note</i> that the button will not be activated unless the player is playing or paused.</p>
 <p>On Android 4.0+ you can also control playback from the lock screen.</p>
+<p><i>NOTE 2</i>: In Jelly Bean only single press works. Blame Google who hijacks long press and double press</p> 
 
 
 <h2>The Song Database</h2>
